Dedicated page for the SQL CASE operator

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -73,6 +73,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [From](./sql/sfmc-sql-from.mdx)
 - [Join](./sql/sfmc-sql-join.mdx)
 - [Where](./sql/sfmc-sql-where.mdx)
+- [Case](./sql/sfmc-sql-case.mdx)
 - [Like](./sql/sfmc-sql-like.mdx)
 - [String Functions](./sql/sfmc-sql-string-functions.mdx)
 - [Date Functions](./sql/sfmc-sql-date-functions.mdx)
