--- a/docs/sql/sfmc-sql-case.mdx
+++ b/docs/sql/sfmc-sql-case.mdx
@@ -2,14 +2,14 @@
 id: sfmc-sql-case
 title: SFMC SQL Case
 sidebar_label: Case
-description: When you have a problem with data then solve it with CASE statement. Empower your Marketing Cloud queries with SQL conditional logic.
+description: Empower your Marketing Cloud queries with conditional SQL CASE logic.
 image: img/og/og-image-sql-case.png
 tags: [Marketing Cloud, SQL]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='When you have a problem with data then solve it with CASE statement. Empower your Marketing Cloud queries with SQL conditional logic.' />
+<LeadText content='Empower your Marketing Cloud queries with conditional SQL CASE logic.' />
 
 ## Conditional values with CASE
 
