--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -133,7 +133,7 @@ I recommend keeping one information per line, as it allows for much easier scann
 
 1. Each [`SELECT`](./sfmc-sql-select.mdx) Column in a separate line
 2. Each [`WHERE`](./sfmc-sql-where.mdx) condition in a separate line
-3. Each [`CASE`](./sfmc-sql-where.mdx#case-in-where) condition in a separate line
+3. Each [`CASE`](./sfmc-sql-case.mdx) condition in a separate line
 4. Each [`JOIN`](./sfmc-sql-join.mdx) and [`ON`](./sfmc-sql-join.mdx#joining-on) relationship in a separate line
 
 ```sql
@@ -231,7 +231,7 @@ This rule focuses on readability. The logic, in short, is to indent whenever the
 - Selected Column Names are children of [`SELECT`](./sfmc-sql-select.mdx)
 - [`JOIN`](./sfmc-sql-join.mdx) keywords are children of the initial Table referenced with [`FROM`](./sfmc-sql-from.mdx)
 - Joining relationships ([`ON`](./sfmc-sql-join.mdx#joining-on)) are children of [`JOIN`](./sfmc-sql-join.mdx)
-- Case conditions are children of the [`CASE`](./sfmc-sql-where.mdx#case-in-where)
+- Case conditions are children of the [`CASE`](./sfmc-sql-case.mdx)
 - Where conditions are children of the [`WHERE`](./sfmc-sql-where.mdx)
 - Sub-queries follow the same rules in respective indentation level.
 
@@ -288,9 +288,9 @@ __Use spaces wherever it makes the query more readable.__
 
 The must-have is spacing around any [operators](./sfmc-sql-where.mdx#basic-operators) (equality or comparison) and after commas.
 
-However, there is another place where spacing is beneficial for readability but might require an exception in some scenarios. Spacing for [aliases](./sfmc-sql-select.mdx#aliasing-with-as) and `THEN` keywords of the [`CASE`](./sfmc-sql-where.mdx#case-in-where) statement.
+However, there is another place where spacing is beneficial for readability but might require an exception in some scenarios. Spacing for [aliases](./sfmc-sql-select.mdx#aliasing-with-as) and `THEN` keywords of the [`CASE`](./sfmc-sql-case.mdx) statement.
 
-I try to use it whenever possible, but when there is huge imbalance in length (for example one Column requires multi-function calculation or there is a single complex `WHEN` in [`CASE`](./sfmc-sql-where.mdx#case-in-where)) equal spacing might make the query harder to read. Always decide which approach works best for your query from readability perspective.
+I try to use it whenever possible, but when there is huge imbalance in length (for example one Column requires multi-function calculation or there is a single complex `WHEN` in [`CASE`](./sfmc-sql-case.mdx)) equal spacing might make the query harder to read. Always decide which approach works best for your query from readability perspective.
 
 ```sql
 /* ✅ Spacing around operators plus equalizing aliases and THEN */
@@ -375,10 +375,10 @@ There are few approaches related to comma placement. Initially, I favoured comma
 
 1. Adding or deleting a Column requires a change in only one line. It's easier, faster and minimises the risk of a crash due to the trailing comma.
 2. Above is also very beneficial during difference checking and when leveraging git for query version control. With a comma at the beginning of the line, the Column addition or deletion is displayed correctly as a single line change.
-3. Having a comma in the beginning makes it easier to assess where a new Column definition starts quickly. It is a vast readability improvement when you are using more complex structures, like [`CASE` in `SELECT`](./sfmc-sql-select.mdx#conditional-values-with-case).
+3. Having a comma in the beginning makes it easier to assess where a new Column definition starts quickly. It is a vast readability improvement when you are using more complex structures, like [`CASE` in `SELECT`](./sfmc-sql-case.mdx#conditional-values-with-case).
 4. It's also easier to quickly assess whether you have a comma for each Column. With lines of various length, it is much harder with the comma at the end.
 
-For the sake of readability, I indent the first Column by two spaces so that it is in line with the following ones. Similarly, I indent `END` after [`CASE` in `SELECT`](./sfmc-sql-select.mdx#conditional-values-with-case) by two spaces for the same reason.
+For the sake of readability, I indent the first Column by two spaces so that it is in line with the following ones. Similarly, I indent `END` after [`CASE` in `SELECT`](./sfmc-sql-case.mdx#conditional-values-with-case) by two spaces for the same reason.
 
 ```sql {3-5,10-12}
 /* ✅ Commas at the beginning */
