Small update to toolset list

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -24,7 +24,6 @@ For all my development on both Mac and Windows, I'm using Microsoft [Visual Stud
 
 A lot of VSCode powers comes from a fantastic extension repository, and some require a sincere recommendation (in alphabetical order):
 
-- [Bracket Pair Colorizer 2](https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer-2): Changes the colour of the matching brackets to differentiate nested elements. The only way to stay sane in JavaScript jungle.
 - [Color Highlight](https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight): Simple tools that add appropriate background to any colour code. Excellent for anything front-end.
 - [ESLint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint): If you write JavaScript, you use ESLint. Period.
 - [Image Preview](https://marketplace.visualstudio.com/items?itemName=kisstkondoros.vscode-gutter-preview): Another handy and straightforward solution. It shows miniatures of the image next to the import in the code.
@@ -38,6 +37,7 @@ A lot of VSCode powers comes from a fantastic extension repository, and some req
 - [Todo Tree](https://marketplace.visualstudio.com/items?itemName=Gruntfuggly.todo-tree): The best way to work with TODO logging in code.
 - [vscode-icons](https://marketplace.visualstudio.com/items?itemName=vscode-icons-team.vscode-icons): Those are nice looking icons.
 - [Live Share](https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare-pack): Pair programming in remote times.
+- [HTML End Tag Labels](https://marketplace.visualstudio.com/items?itemName=anteprimorac.html-end-tag-labels): Adds HTML tag details on closing tags to make it easier to find yourself in the nested jungle.
 
 Finally, it is not an extension, but a must-have for me: [Fira Code](https://github.com/tonsky/FiraCode) font. Check it out. You will love it.
 
