Clean up in Enhanced Send Log article positioning and cross-reference with Email Send Debugging Query

--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -84,6 +84,8 @@ If you are running it from child Business Unit and do not see EmailAddress, Boun
 
 :::
 
+If you don't see the send in the outcomes at all - check whether it errored out in the [Send Log](../usecase/sfmc-enhanced-send-log.mdx) and confirm the subscriber status in Email Studio.
+
 ## Options
 
 You can even adapt the above query to better suit your needs.
