--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -107,6 +107,7 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 
 - [Tailor with Data](./usecase/tailor-with-data.mdx)
 - [Engage with Countdown](./usecase/engage-with-countdown.mdx)
+- [Enhanced Send Log](./sql/sfmc-enhanced-send-log.mdx)
 - [Solve with Cloud Page Apps](./usecase/sfmc-cloud-page-apps.mdx)
 - [Contact Deletion Process](./usecase/sfmc-contact-deletion.mdx)
 
